--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3"
 services:
   nginx:
     image: nginx:latest
-    container_name: nginx00
+    container_name: nginx
     ports:
       - "80:80"
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
       - ./src:/var/www/html
