fix wrong dockerfile path

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     # image: nginx:latest
     build:
       context: .
-      dockerfile: ./
+      dockerfile: ./nginx/Dockerfile
     container_name: nginx
     ports:
       - "80:80"
