--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,11 +3,10 @@ services:
   nginx:
     # image: nginx:latest
     build:
-      context: .
-      dockerfile: ./nginx/Dockerfile
+      context: ./nginx
+      dockerfile: .
     container_name: nginx
     ports:
-      - "80:80"
+      - "1024:1024"
     volumes:
-      - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
-      - ./src:/var/www/html
+      - ./nginx/tools/html:/usr/share/nginx/html
