--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -7,12 +7,12 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
+    ssl_protocols TLSv1.2 TLSv1.3;
     sendfile        on;
     keepalive_timeout  65;
 
     server {
-        listen 1024;
+        listen 443;
 
         location / {
             root   /usr/share/nginx/html;  # Nginxのデフォルトのhtmlディレクトリへのパス。変更が必要な場合は適宜変更してください。
