--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,18 +1,21 @@
 # ベースイメージとしてAlpineを使用
-FROM alpine:latest
+FROM alpine:3.19
 
 # nginxをインストール
-RUN apk update && apk add nginx
-RUN apk add bash
-
-# 必要に応じて設定ファイルやコンテンツをコピー
-# COPY nginx.conf /etc/nginx/nginx.conf
-# COPY content/ /usr/share/nginx/html/
-
+RUN apk update \
+    && apk add nginx \
+    && apk add openssl \
 # nginxのログファイルのシンボリックリンクをstdoutとstderrに作成
-RUN ln -sf /dev/stdout /var/log/nginx/access.log \
-    && ln -sf /dev/stderr /var/log/nginx/error.log
+    && ln -sf /dev/stdout /var/log/nginx/access.log \
+    && ln -sf /dev/stderr /var/log/nginx/error.log \
+# 秘密鍵の生成 create secret key
+    && openssl genrsa 2048 > /etc/nginx/secret.key \
+# 証明書の生成 create certificate
+    && openssl req -x509 -nodes -days 30 \
+        -subj "/C=JP/ST=Tokyo/L=Tokyo/O=42tokyo/OU=student/CN=kakiba.web/emailAddress=kakiba@student.42tokyo.jp"\
+        -key /etc/nginx/secret.key -out /etc/nginx/secret.crt
+
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
 # nginxを実行
-CMD ["nginx", "-g", "daemon off;"]  
+CMD ["nginx", "-g", "daemon off;"]
