nginx return it's html 課題的にはwordpress のsite を/home/login/data ディレクトリ配下にvolume を作り表示する

--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -16,6 +16,7 @@ RUN apk update \
         -key /etc/nginx/secret.key -out /etc/nginx/secret.crt
 
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./tools/html /usr/share/nginx/html
 
 # nginxを実行
 CMD ["nginx", "-g", "daemon off;"]
