--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -1,26 +1,31 @@
-worker_processes 1;
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
+
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
     sendfile        on;
+    #tcp_nopush     on;
+
     keepalive_timeout  65;
 
-    server {
-        listen              443 ssl;
-        server_name         www.example.com;
-        ssl_certificate     secret.crt; # SSL証明書
-        ssl_certificate_key secret.key; # SSL証明書の秘密鍵
-        ssl_protocols       TLSv1.2 TLSv1.3; # SSLプロトコル
-        ssl_ciphers         HIGH:!aNULL:!MD5; # encrypt algorithm
+    #gzip  on;
 
-        location / {
-            root   /usr/share/nginx/html;  # Nginxのデフォルトのhtmlディレクトリへのパス。変更が必要な場合は適宜変更してください。
-            try_files $uri $uri/ /index.html;
-        }
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
