nginx container and wordpress container connect each other obviously

--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -12,6 +12,8 @@ services:
       - wordpress_sites:/var/www/html
     depends_on:
       - wordpress
+    networks:
+      - frontend
 
   wordpress:
     image: wordpress:6.4.2-php8.1-fpm
@@ -20,6 +22,12 @@ services:
       - 9000:80
     volumes:
       - wordpress_sites:/var/www/html
+    networks:
+      - frontend
 
 volumes:
   wordpress_sites:
+
+networks:
+  frontend:
+    driver: bridge
