--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -7,12 +7,16 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    ssl_protocols TLSv1.2 TLSv1.3;
     sendfile        on;
     keepalive_timeout  65;
 
     server {
-        listen 443;
+        listen              443 ssl;
+        server_name         www.example.com;
+        ssl_certificate     secret.crt; # SSL証明書
+        ssl_certificate_key secret.key; # SSL証明書の秘密鍵
+        ssl_protocols       TLSv1.2 TLSv1.3; # SSLプロトコル
+        ssl_ciphers         HIGH:!aNULL:!MD5; # encrypt algorithm
 
         location / {
             root   /usr/share/nginx/html;  # Nginxのデフォルトのhtmlディレクトリへのパス。変更が必要な場合は適宜変更してください。
