--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -31,7 +31,10 @@ services:
       - WORDPRESS_DB_NAME=wordpress
       - WORDPRESS_TABLE_PREFIX=wp_
   db:
-    image: mariadb:10.6.5
+    build:
+      context: ./mariadb
+      dockerfile: ./Dockerfile
+    image: inception_mariadb_dayo
     restart: always
     ports:
       - 3306:3306
