mariadb with my dockerfile

--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,22 +1,16 @@
-# vim:set ft=dockerfile:
 FROM alpine:3.19
 
 RUN apk add mysql mysql-client openrc vim bash \
     && mkdir -p /run/openrc \
     && touch /run/openrc/softlevel \
-    && mkdir /var/lib/mysql \
-    && chown -R mysql:mysql /var/lib/mysql \
-    && mysql_install_db --user=mysql --datadir=/var/lib/mysql \
-    && rc-service mariadb setup
-    # && rc-service mariadb start
-    # && addgroup -S mysql && adduser -S -G mysql kakiba
+    && sed -i 's/^skip-networking/skip-networking = 0\nskip-bind-address\nskip-name-resolve\nport = 3306\ncharacter-set-server = utf8/g' /etc/my.cnf.d/mariadb-server.cnf \
+    && rc-status \
+    && rm -rf /var/lib/mysql \
+	&& mkdir -p /var/lib/mysql /var/run/mysqld \
+	&& chown -R mysql:mysql /var/lib/mysql /var/run/mysqld \
+    && chmod 777 /var/run/mysqld
 
-# VOLUME /var/lib/mysql
+EXPOSE 3306
 
-# COPY ./healthcheck.sh /usr/local/bin/healthcheck.sh
-# COPY ./docker-entrypoint.sh /usr/local/bin/
-# ENTRYPOINT ["docker-entrypoint.sh"]
-
-# EXPOSE 3306
-# CMD ["mariadbd"]
-CMD ["sleep", "infinity"]
+COPY ./entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["entrypoint.sh"]
