--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -25,11 +25,11 @@ services:
       - frontend
       - backend
     environment:
-      - WORDPRESS_DB_HOST=db
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
-      - WORDPRESS_DB_NAME=wordpress
-      - WORDPRESS_TABLE_PREFIX=wp_
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: ${MYSQL_USER}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+      WORDPRESS_TABLE_PREFIX: wp_
   db:
     build:
       context: ./mariadb
@@ -39,10 +39,10 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -50,7 +50,16 @@ services:
 
 volumes:
   wordpress_sites:
+    driver_opts:
+      o: bind
+      device: ${WP_VOLUME_DIR}
+      type: none
   db_data:
+    driver: local
+    driver_opts:
+      o: bind
+      device: ${DB_VOLUME_DIR}
+      type: none
 
 networks:
   frontend:
