--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   nginx:
     build:
-      context: ./nginx
+      context: ./requirements/nginx
       dockerfile: ./Dockerfile
     image: inception_nginx_dayo
     container_name: nginx
@@ -15,7 +15,10 @@ services:
     networks:
       - frontend
   wordpress:
-    image: wordpress:6.4.2-php8.1-fpm
+    build:
+      context: ./requirements/wordpress
+      dockerfile: ./Dockerfile
+    image: inception_wordpress_dayo
     restart: always
     ports:
       - 9000:80
