wordpress with dockerfile

--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -28,24 +28,31 @@ services:
       - frontend
       - backend
     environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: ${MYSQL_USER}
-      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-      WORDPRESS_TABLE_PREFIX: wp_
+      DB_NAME: ${MYSQL_DATABASE}
+      DB_USER: ${MYSQL_USER}
+      DB_PASS: ${MYSQL_PASSWORD}
+      DB_HOST: db
+      WP_DATA_PATH: /var/www/html
+      WP_URL: ${WP_URL}
+      WP_TITLE: ${WP_TITLE}
+      WP_ADMIN_USER: ${WP_ADMIN_USER}
+      WP_ADMIN_PASSWORD: ${WP_ADMIN_PASSWORD}
+      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
+      WP_EDITOR_USER: ${WP_EDITOR_USER}
+      WP_EDITOR_PASSWORD: ${WP_EDITOR_PASSWORD}
+      WP_EDITOR_EMAIL: ${WP_EDITOR_EMAIL}
   db:
     build:
-      context: ./mariadb
+      context: ./requirements/mariadb
       dockerfile: ./Dockerfile
     image: inception_mariadb_dayo
     restart: always
     ports:
       - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      DB_NAME: ${MYSQL_DATABASE}
+      DB_USER: ${MYSQL_USER}
+      DB_PASS: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
     networks:
