--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -27,6 +27,9 @@ services:
     networks:
       - frontend
       - backend
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       DB_NAME: ${MYSQL_DATABASE}
       DB_USER: ${MYSQL_USER}
@@ -57,6 +60,11 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - backend
+    healthcheck:
+      test: ["CMD", "mariadb", "-h", "db", "-u", "${MYSQL_USER}", "-p${MYSQL_PASSWORD}"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
 volumes:
   wordpress_sites:
