I don't know why. but error

--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -1,6 +1,5 @@
 server {
     listen              443 ssl;
-    server_name         localhost;
     ssl_certificate     secret.crt; # SSL証明書
     ssl_certificate_key secret.key; # SSL証明書の秘密鍵
     ssl_protocols       TLSv1.2 TLSv1.3; # SSLプロトコル
@@ -29,4 +28,9 @@ server {
         expires max;
         access_log off;
     }
+}
+
+server {
+    listen 80;
+    return 301 https://$host$request_uri;
 }
