--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -47,7 +47,7 @@ services:
       WP_EDITOR_EMAIL: ${WP_EDITOR_EMAIL}
       WP_DEBUG: ${WP_DEBUG}
     healthcheck:
-      test: ["SHELL-CMD", "curl http://localhost:9000 > /dev/null 2>&1 ; expr $? = 56"]
+      test: ["CMD-SHELL", "curl http://localhost:9000 > /dev/null 2>&1 ; expr $? = 56"]
       # curl(56) は connection reset by peer. それ以前は 7 で、接続エラー.
       # fastcgi なので http通信は出来ない. reset されることでサーバーの起動を確認する
       # fastcgi server にリクエストを送るコマンドがあれば採用したい
