--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -1,25 +1,25 @@
-LOGIN=
-DOMAIN_NAME=
-OPEN_PORT=
+LOGIN=kakiba
+DOMAIN_NAME=${LOGIN}.42.fr
+OPEN_PORT=2525
 
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wordpress
 MYSQL_PASSWORD=
 
 # WORDPRESS users for admin and editor
-WP_ADMIN_USER=
+WP_ADMIN_USER=${LOGIN}
 WP_ADMIN_PASSWORD=
-WP_ADMIN_EMAIL=
-WP_EDITOR_USER=
-WP_EDITOR_PASSWORD=
-WP_EDITOR_EMAIL=
+WP_ADMIN_EMAIL=${LOGIN}@example.com
+WP_EDITOR_USER=editor
+WP_EDITOR_PASSWORD=password
+WP_EDITOR_EMAIL=editor@example.com
 WP_URL=https://${DOMAIN_NAME}:${OPEN_PORT}
-WP_DEBUG=
-WP_TITLE=
+WP_DEBUG=true
+WP_TITLE="${LOGIN}'s blog"
 
 # Volume
-VOLUME_DIR=~/data
-WP_VOLUME_DIR=
-DB_VOLUME_DIR=
+VOLUME_DIR=/home/${USER}/data
+WP_VOLUME_DIR=${VOLUME_DIR}/wordpress
+DB_VOLUME_DIR=${VOLUME_DIR}/mariadb
