Fix file deletion issue in Makefile
in compose test, $$

--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -3,17 +3,13 @@ DOMAIN_NAME=${LOGIN}.42.fr
 OPEN_PORT=2525
 
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
-MYSQL_PASSWORD=
 
 # WORDPRESS users for admin and editor
 WP_ADMIN_USER=${LOGIN}
-WP_ADMIN_PASSWORD=
 WP_ADMIN_EMAIL=${LOGIN}@example.com
 WP_EDITOR_USER=editor
-WP_EDITOR_PASSWORD=password
 WP_EDITOR_EMAIL=editor@example.com
 WP_URL=https://${DOMAIN_NAME}:${OPEN_PORT}
 WP_DEBUG=true
@@ -23,3 +19,8 @@ WP_TITLE="${LOGIN}'s blog"
 VOLUME_DIR=/home/${USER}/data
 WP_VOLUME_DIR=${VOLUME_DIR}/wordpress
 DB_VOLUME_DIR=${VOLUME_DIR}/mariadb
+
+MYSQL_ROOT_PASSWORD=
+MYSQL_PASSWORD=
+WP_ADMIN_PASSWORD=
+WP_EDITOR_PASSWORD=
