--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -3,10 +3,14 @@ DOMAIN_NAME=${LOGIN}.42.fr
 OPEN_PORT=2525
 
 # MYSQL SETUP
+MYSQL_ROOT_PASSWORD=
+MYSQL_PASSWORD=
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
 
 # WORDPRESS users for admin and editor
+WP_ADMIN_PASSWORD=
+WP_EDITOR_PASSWORD=
 WP_ADMIN_USER=${LOGIN}
 WP_ADMIN_EMAIL=${LOGIN}@example.com
 WP_EDITOR_USER=editor
@@ -17,10 +21,5 @@ WP_TITLE="${LOGIN}'s blog"
 
 # Volume
 VOLUME_DIR=/home/${USER}/data
+MYSQL_VOLUME_DIR=${VOLUME_DIR}/mariadb
 WP_VOLUME_DIR=${VOLUME_DIR}/wordpress
-DB_VOLUME_DIR=${VOLUME_DIR}/mariadb
-
-MYSQL_ROOT_PASSWORD=
-MYSQL_PASSWORD=
-WP_ADMIN_PASSWORD=
-WP_EDITOR_PASSWORD=
