--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -45,14 +45,13 @@ services:
       WP_EDITOR_EMAIL: ${WP_EDITOR_EMAIL}
       WP_DEBUG: ${WP_DEBUG}
     healthcheck:
-      test: ["CMD-SHELL", "curl http://localhost:9000 > /dev/null 2>&1 ; expr $? = 56"]
+      test: ["CMD-SHELL", "curl http://localhost:9000 > /dev/null 2>&1 ; expr $$? = 56"]
       # curl(56) は connection reset by peer. それ以前は 7 で、接続エラー.
       # fastcgi なので http通信は出来ない. reset されることでサーバーの起動を確認する
       # fastcgi server にリクエストを送るコマンドがあれば採用したい
       interval: 5s
       timeout: 5s
       retries: 100
-      start_period: 5s
   db:
     build:
       context: ./requirements/mariadb
@@ -63,6 +62,7 @@ services:
       DB_NAME: ${MYSQL_DATABASE}
       DB_USER: ${MYSQL_USER}
       DB_PASS: ${MYSQL_PASSWORD}
+      DB_DATA_PATH: /var/lib/mysql
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -83,7 +83,7 @@ volumes:
     driver: local
     driver_opts:
       o: bind
-      device: ${DB_VOLUME_DIR}
+      device: ${MYSQL_VOLUME_DIR}
       type: none
 
 networks:
