Update MySQL and WordPress passwords in .env.template .env をignore する stored credentials とかは禁止されているが、sampleとして置いておく問題はないと判断した。(.env としてコピーしないと利用されないし)

--- a/srcs/.env.template
+++ b/srcs/.env.template
@@ -3,14 +3,14 @@ DOMAIN_NAME=${LOGIN}.42.fr
 OPEN_PORT=2525
 
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=password
+MYSQL_PASSWORD=password
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
 
 # WORDPRESS users for admin and editor
-WP_ADMIN_PASSWORD=
-WP_EDITOR_PASSWORD=
+WP_ADMIN_PASSWORD=password
+WP_EDITOR_PASSWORD=password
 WP_ADMIN_USER=${LOGIN}
 WP_ADMIN_EMAIL=${LOGIN}@example.com
 WP_EDITOR_USER=editor
